Improved guessing, updated README.md

--- a/tamil-verbs.cabal
+++ b/tamil-verbs.cabal
@@ -26,6 +26,7 @@ executable tamil-verbs
   default-extensions:  LambdaCase,
                        PatternSynonyms,
                        NamedFieldPuns,
+                       RecordWildCards,
                        OverloadedStrings,
                        BlockArguments,
                        DeriveFunctor,
