--- a/tamil-verbs.cabal
+++ b/tamil-verbs.cabal
@@ -22,7 +22,9 @@ executable tamil-verbs
   other-modules:       TamilString,
                        Verb,
                        Conjugation,
-                       Request
+                       Request,
+                       Interactive,
+                       Learn
   default-extensions:  LambdaCase,
                        PatternSynonyms,
                        NamedFieldPuns,
@@ -32,11 +34,11 @@ executable tamil-verbs
                        DeriveFunctor,
                        DeriveGeneric
   build-depends:       base ^>=4.12.0.0,
-                       mtl >=2.2,
-                       transformers >=0.5,
-                       optparse-applicative >=0.15,
-                       containers >= 0.6 && <0.7,
+                       containers >=0.6 && <0.7,
                        unordered-containers >=0.2.11,
+                       random >=1.2 && <1.3,
+                       mwc-random >=0.15 && <0.16,
+                       filepath >=1.4 && <1.5,
                        hashable >=1.0.1.1
   hs-source-dirs:      src
   default-language:    Haskell2010
